ingress-final/Ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: ip-172-31-16-157.ap-south-1.compute.internal
      http:
        paths:
        - path: /login
          backend:
            serviceName: demo-web-service
            servicePort: 8082
        - path: /helloworld
          backend:
            serviceName: demo-web-service
            servicePort: 8082
